test/nashorn/script/basic/funcconstructor.js.EXPECTED
anon func
225
function (x) {
print('anon func'); return x*x;
}
syntax error? true
SyntaxError: <function>:1:13 Missing close quote
print('hello)
             ^
done
